# linear_operator

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  README.md  propagate_type_hints.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  typing_examples.txt  typing_examples_jax.txt
.conda/: meta.yaml
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---documentation-examples.md  other.md  refactor.md
.github/workflows/: deploy.yml  linting.yml  pull_request.yml  push_to_main.yml  run_linter.yml  run_test_suite.yml  run_type_checked_test_suite.yml  unittests.yml
.hooks/: check_type_hints.sh  propagate_type_hints.py  propagate_type_hints.sh
docs/: make.bat  requirements.txt
docs/source/: about.rst  composition_decoration_operators.rst  conf.py  converting.rst  custom_linear_operators.rst  data_sparse_operators.rst  functions.rst  index.rst  install.rst  intro.rst  linear_operator.rst  linear_solvers.rst  namespace.rst  operators.rst  settings.rst  structure.rst  using.rst  utils.rst
examples/: LinearOperator_demo.ipynb
gpytorch/: beta_features.py  settings.py
gpytorch/functions/: __init__.py
gpytorch/lazy/: __init__.py
linear_operator/: __init__.py  beta_features.py  settings.py
linear_operator/functions/: __init__.py  _diagonalization.py  _dsmm.py  _inv_matmul.py  _inv_quad.py  _inv_quad_logdet.py  _matmul.py  _pivoted_cholesky.py  _root_decomposition.py  _solve.py  _sqrt_inv_matmul.py
linear_operator/lazy/: constant_mul_lazy_tensor.py  kronecker_product_lazy_tensor.py  (+1 more)
test/: conftest.py  test_settings.py  typecheck-pytest.ini
(+166 files in other folders)
